deposits - finish html form
TODO: deposit creation.

--- a/templates/search/deposits_create.jade
+++ b/templates/search/deposits_create.jade
@@ -21,23 +21,42 @@
 {% bootstrap_css %}
 {% bootstrap_javascript %}
 
-h3 Nouveau dépôt:
+h3 Nouveau dépôt
 div(ng-controller="IntroController")
 
   // form(action='/api/distributors', method='post')
   form(method='post')
-      select.form-control(ng-model="distributor", ng-options='{% verbatim %}dist for dist in dist_list{% endverbatim %}')
+      b
+        div Nom du dépôt
+      input.form-control(type="text", ng-model="deposit_name", required)
+      b
+        div Type de dépôt
+      select.form-control(ng-model="deposit_type", ng-options="elt.name group by elt.target for elt in deposit_types", required)
+      b
+        div Nombre initial d'exemplaires
+      input.form-control(type="number", ng-model="initial_nb")
+      b
+        div Nombre minimum d'exemplaires
+      input.form-control(type="number", ng-model="minimal_nb")
+      div.form-group
+        div.checkbox
+            input(type="checkbox", ng-model="auto_command")
+            | Automatiquement marquer les fiches à commander
+      b
+        div Distributeur
+      select.form-control(ng-model="distributor", ng-options='{% verbatim %}dist for dist in dist_list{% endverbatim %}', required)
         option(value="") ---
       div
-        span Cherchez des notices
-        span(ng-show="distributor") dont le distributeur est {% verbatim %} {{ distributor }} {% endverbatim %}:
+        span Cherchez des notices 
+        span(ng-show="distributor")  dont le distributeur est {% verbatim %} {{ distributor }} {% endverbatim %}:
       input.nullable.form-control(type='text', typeahead-loading="loadingCards", ng-model='{% verbatim %} copy_selected {% endverbatim %}', typeahead='{% verbatim %} copy.repr for copy in getCards($viewValue) {% endverbatim %}', typeahead-min-length="3", typeahead-on-select="add_selected_card($item)")
       i.glyphicon.glyphicon-refresh(ng-show='loadingCards')
       ul.list-group(ng-show="cards_selected", ng-repeat=" card in cards_selected ")
         li.list-group-item.list-group-item-info {% verbatim %} {{card.repr}} {% endverbatim %}
           i.glyphicon.glyphicon-remove(ng-click="remove_from_selection($index)")
 
-      input.btn.btn-primary(type="submit", value="Enregistrer", ng-click="addDeposit()")
+      // input.btn.btn-primary(type="submit", value="Enregistrer", ng-click="addDeposit()")
+      input.btn.btn-primary(type="submit", value="Enregistrer", ng-submit="addDeposit()")
 
 form(action='/deposits/create/', method='post')
   {% csrf_token %}
