--- a/templates/search/deposits_create.jade
+++ b/templates/search/deposits_create.jade
@@ -24,6 +24,9 @@
 h3 Nouveau dépôt
 div(ng-controller="IntroController")
 
+  div
+    alert(ng-repeat="alert in messages", type="{{alert.level}}", close="closeAlert($item)") {% verbatim %} {{alert.message}} {% endverbatim %}
+
   // form(action='/api/distributors', method='post')
   form(method='post')
       b
@@ -34,17 +37,17 @@ div(ng-controller="IntroController")
       select.form-control(ng-model="deposit_type", ng-options="elt.name group by elt.target for elt in deposit_types", required)
       b
         div Nombre initial d'exemplaires
-      input.form-control(type="number", ng-model="initial_nb")
+      input.form-control(type="number", ng-model="initial_nb_copies")
       b
         div Nombre minimum d'exemplaires
-      input.form-control(type="number", ng-model="minimal_nb")
+      input.form-control(type="number", ng-model="minimal_nb_copies")
       div.form-group
         div.checkbox
             input(type="checkbox", ng-model="auto_command")
             | Automatiquement marquer les fiches à commander
       b
         div Distributeur
-      select.form-control(ng-model="distributor", ng-options='{% verbatim %}dist for dist in dist_list{% endverbatim %}', required)
+      select.form-control(ng-model="distributor", ng-options='dist for dist in dist_list', required)
         option(value="") ---
       div
         span Cherchez des notices 
@@ -55,8 +58,8 @@ div(ng-controller="IntroController")
         li.list-group-item.list-group-item-info {% verbatim %} {{card.repr}} {% endverbatim %}
           i.glyphicon.glyphicon-remove(ng-click="remove_from_selection($index)")
 
-      // input.btn.btn-primary(type="submit", value="Enregistrer", ng-click="addDeposit()")
-      input.btn.btn-primary(type="submit", value="Enregistrer", ng-submit="addDeposit()")
+      input.btn.btn-primary(type="submit", value="Enregistrer", ng-click="addDeposit()")
+      // input.btn.btn-primary(type="submit", value="Enregistrer", ng-submit="addDeposit()")
 
 
 {% endblock content %}
