--- a/templates/search/index.jade
+++ b/templates/search/index.jade
@@ -15,6 +15,7 @@
 // along with Abelujo.  If not, see <http://www.gnu.org/licenses/>.
 {% extends "base.jade" %}
 
+{% block auto_command_nb %} {{ auto_command_nb }} {% endblock %}
 
 {% block content %}
 
