--- a/templates/search/deposits_view.jade
+++ b/templates/search/deposits_view.jade
@@ -15,6 +15,8 @@
 // along with Abelujo.  If not, see <http://www.gnu.org/licenses/>.
 {% extends "base.jade" %}
 
+{% block auto_command_nb %} {{ auto_command_nb }} {% endblock %}
+
 {% block content %}
 
 {% load bootstrap3 %}
