--- a/templates/search/search_result.jade
+++ b/templates/search/search_result.jade
@@ -15,6 +15,8 @@
 // along with Abelujo.  If not, see <http://www.gnu.org/licenses/>.
 {% extends "search/index.jade" %}
 
+{% block auto_command_nb %} {{ auto_command_nb }} {% endblock %}
+{% block title %} searching TEST {% endblock %}
 
 {% load bootstrap3 %}
 {% bootstrap_css %}
