--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -31,18 +31,25 @@ div(ng-controller="sellController")
   form(method='post')
       b
         div Type de fiche
-      select.form-control(ng-model="card_type", ng-options="elt.name group by elt.target for elt in card_types", required)
+      select.form-control(ng-model="card_type", ng-options="elt.name group by elt.group for elt in card_types", required)
 
       div
-        span Cherchez des {% verbatim %} {{ card_type }} {% endverbatim %}
+        span Look for a {% verbatim %} {{ card_type.name }} {% endverbatim %}
 
-      input.nullable.form-control(type='text', typeahead-loading="loadingCards", ng-model='{% verbatim %} copy_selected {% endverbatim %}', typeahead='{% verbatim %} copy.repr for copy in getCards($viewValue) {% endverbatim %}', typeahead-min-length="3", typeahead-on-select="add_selected_card($item)")
+      input.nullable.form-control(type='text', typeahead-loading="loadingCards", ng-model='{% verbatim %} copy_selected {% endverbatim %}', typeahead='{% verbatim %} copy.repr for copy in getCards($viewValue, card_type_id) {% endverbatim %}', typeahead-min-length="3", typeahead-on-select="add_selected_card($item)")
       i.glyphicon.glyphicon-refresh(ng-show='loadingCards')
-      ul.list-group(ng-show="cards_selected", ng-repeat=" card in cards_selected ")
-        li.list-group-item.list-group-item-info {% verbatim %} {{card.repr}} {% endverbatim %}
+
+      h3(ng-show="cards_selected.length") {% verbatim %} {{ cards_selected.length }} {% endverbatim %} titres sélectionnés. Total: {% verbatim %} {{ total_price }} {% endverbatim %}
+      div(ng-show="cards_selected", ng-repeat=" card in cards_selected ")
+        h3: a(href="{% verbatim %} {{ card.details_url }} {% endverbatim %}") {% verbatim %} {{card.title}} {% endverbatim %}
+        span
+            h4 {% verbatim %} {{card.authors}} {% endverbatim %}
+            input.form-control(type="number", value="{% verbatim %} {{card.price}} {% endverbatim %}") {% verbatim %} {{card.price}} {% endverbatim %}
+
+
           i.glyphicon.glyphicon-remove(ng-click="remove_from_selection($index)")
 
-      input.btn.btn-primary(type="submit", value="Enregistrer", ng-click="addDeposit()")
+      input.btn.btn-primary(type="submit", value="Valider", ng-click="addDeposit()")
       // input.btn.btn-primary(type="submit", value="Enregistrer", ng-submit="addDeposit()")
 
 
