ONGOING sell cards (with js)

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -41,6 +41,8 @@ html(ng-app="abelujo")
           li
             a(href="/collection") Mon stock
           li
+            a(href="/sell") Vente
+          li
             a(href="/search") Nouvelle entrée
           li
             a(href="/deposits") Dépôts
