--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -25,26 +25,47 @@ h3 Effectuer une vente
 div(ng-controller="sellController")
 
   div
-    alert(ng-repeat="alert in messages", type="{{alert.level}}", close="closeAlert($item)") {% verbatim %} {{alert.message}} {% endverbatim %}
+    alert(
+      ng-repeat="alert in messages"
+      type="{{alert.level}}"
+      close="closeAlert($item)"
+    )
+      {% verbatim %} {{alert.message}} {% endverbatim %}
 
   // form(action='/api/distributors', method='post')
   form(method='post')
       b
         div Type de fiche
-      select.form-control(ng-model="card_type", ng-options="elt.name group by elt.group for elt in card_types", required)
+      select.form-control(
+        ng-model="card_type"
+        ng-options="elt.name group by elt.group for elt in card_types"
+        required
+      )
 
       div
         span Look for a {% verbatim %} {{ card_type.name }} {% endverbatim %}
 
-      input.nullable.form-control(type='text', typeahead-loading="loadingCards", ng-model='{% verbatim %} copy_selected {% endverbatim %}', typeahead='{% verbatim %} copy.repr for copy in getCards($viewValue, card_type_id) {% endverbatim %}', typeahead-min-length="3", typeahead-on-select="add_selected_card($item)")
+      input.nullable.form-control(
+        type='text'
+        typeahead-loading="loadingCards"
+        ng-model='{% verbatim %} copy_selected {% endverbatim %}'
+        typeahead='{% verbatim %} copy.repr for copy in getCards($viewValue, card_type_id) {% endverbatim %}'
+        typeahead-min-length="3"
+        typeahead-on-select="add_selected_card($item)"
+      )
       i.glyphicon.glyphicon-refresh(ng-show='loadingCards')
 
-      h3(ng-show="cards_selected.length") {% verbatim %} {{ cards_selected.length }} {% endverbatim %} titres sélectionnés. Total: {% verbatim %} {{ total_price }} {% endverbatim %}
+      h3(ng-show="cards_selected.length")
+        {% verbatim %} {{ cards_selected.length }} {% endverbatim %} titres sélectionnés. Total: {% verbatim %} {{ total_price }} {% endverbatim %}
       div(ng-show="cards_selected", ng-repeat=" card in cards_selected ")
         h3: a(href="{% verbatim %} {{ card.details_url }} {% endverbatim %}") {% verbatim %} {{card.title}} {% endverbatim %}
         span
             h4 {% verbatim %} {{card.authors}} {% endverbatim %}
-            input.form-control(type="number", value="{% verbatim %} {{card.price}} {% endverbatim %}") {% verbatim %} {{card.price}} {% endverbatim %}
+            input.form-control(
+              type="float"
+              value="{% verbatim %} {{card.price}} {% endverbatim %}"
+            )
+              {% verbatim %} {{card.price}} {% endverbatim %}
 
 
           i.glyphicon.glyphicon-remove(ng-click="remove_from_selection($index)")
