--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -27,7 +27,7 @@ div(ng-controller="sellController")
   div
     alert(
       ng-repeat="alert in messages"
-      type="{{alert.level}}"
+      type="{% verbatim %} {{alert.level}} {% endverbatim %}"
       close="closeAlert($item)"
     )
       {% verbatim %} {{alert.message}} {% endverbatim %}
@@ -58,17 +58,18 @@ div(ng-controller="sellController")
       h3(ng-show="cards_selected.length")
         {% verbatim %} {{ cards_selected.length }} {% endverbatim %} titres sélectionnés. Total: {% verbatim %} {{ total_price }} {% endverbatim %}
       div(ng-show="cards_selected", ng-repeat=" card in cards_selected ")
-        h4: a(href="{% verbatim %} {{ card.details_url }} {% endverbatim %}") {% verbatim %} {{card.title}} {% endverbatim %}
+        h4
+          a(href="{% verbatim %} {{ card.details_url }} {% endverbatim %}") {% verbatim %} {{card.title}} {% endverbatim %}
+          span {% verbatim %} {{card.authors}} {% endverbatim %}
+          i.glyphicon.glyphicon-remove(ng-click="remove_from_selection($index)", style="float: right;")
         span
-            div {% verbatim %} {{card.authors}} {% endverbatim %}
             input.form-control(
-              type="number", step="0.01", min=0
+              type="number", step="0.1", min=0
               value="{% verbatim %} {{card.price_sold}} {% endverbatim %}"
               ng-model="{% verbatim %} cards_selected[$index].price_sold {% endverbatim %}"
               ng-change="{% verbatim %} updateTotalPrice() {% endverbatim %}"
             )
 
-          i.glyphicon.glyphicon-remove(ng-click="remove_from_selection($index)")
 
       input.btn.btn-primary(type="submit", value="Valider", ng-click="addDeposit()")
       // input.btn.btn-primary(type="submit", value="Enregistrer", ng-submit="addDeposit()")
