Sell UI: cancel button.

--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -73,6 +73,7 @@ div(ng-controller="sellController")
 
       input.btn.btn-primary(type="submit", value="Valider", ng-click="addDeposit()")
       // input.btn.btn-primary(type="submit", value="Enregistrer", ng-submit="addDeposit()")
+      input.btn.btn(value="Annuler", ng-click="cancelSell()")
 
 
 {% endblock content %}
