--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -26,7 +26,7 @@ div(ng-controller="sellController")
 
   div
     alert(
-      ng-repeat="alert in messages"
+      ng-repeat="alert in alerts"
       type="{% verbatim %} {{alert.level}} {% endverbatim %}"
       close="closeAlert($item)"
     )
@@ -52,6 +52,7 @@ div(ng-controller="sellController")
         typeahead='{% verbatim %} copy.repr for copy in getCards($viewValue, card_type_id) {% endverbatim %}'
         typeahead-min-length="3"
         typeahead-on-select="add_selected_card($item)"
+        title="Use TAB to validate your choice, Enter to proceed."
       )
       i.glyphicon.glyphicon-refresh(ng-show='loadingCards')
 
@@ -71,9 +72,9 @@ div(ng-controller="sellController")
             )
 
 
-      input.btn.btn-primary(type="submit", value="Valider", ng-click="addDeposit()")
-      // input.btn.btn-primary(type="submit", value="Enregistrer", ng-submit="addDeposit()")
-      input.btn.btn(value="Annuler", ng-click="cancelSell()")
+      input.btn.btn-primary(type="submit", value="Valider", ng-click="sellCards()")
+      // input.btn.btn-primary(type="submit", value="Valider", ng-submit="sellCards()")
+      input.btn.btn(value="Annuler", ng-click="cancelCurrentData()")
 
 
 {% endblock content %}
