--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -36,9 +36,8 @@ div(ng-controller="sellController")
   // form(action='/api/distributors', method='post')
   form(method='post')
 
-      b Date
       .row
-        .col-md-6
+        .col-md-3
           p.input-group
             input.form-control(
               type='text'
@@ -53,42 +52,74 @@ div(ng-controller="sellController")
               button.btn.btn-default(type='button', ng-click='open($event)')
                 i.glyphicon.glyphicon-calendar
 
-      b
-        div Type de fiche
-      select.form-control(
-        ng-model="card_type"
-        ng-options="elt.name group by elt.group for elt in card_types"
-        required
-      )
+        .col-md-9
+          p.input-group
+            label.sr-only Payment
+            select.form-control(
+              ng-model="payment"
+              ng-options="elt.name for elt in payment_means"
+              required
+            )
+
+      .row
+        .col-md-3
+            span.input-group-btn
+              label.sr-only Card type
+              select.form-control(
+                ng-model="card_type"
+                ng-options="elt.name group by elt.group for elt in card_types"
+                required
+              )
+        .col-md-9
+          p.input-group
+            input.nullable.form-control(
+              type='text'
+              typeahead-loading="loadingCards"
+              ng-model='{% verbatim %} copy_selected {% endverbatim %}'
+              typeahead='{% verbatim %} copy.repr for copy in getCards($viewValue, card_type_id) {% endverbatim %}'
+              typeahead-min-length="3"
+              typeahead-on-select="add_selected_card($item)"
+              title="Use TAB to validate your choice, Enter to proceed."
+            )
+            i.glyphicon.glyphicon-refresh(ng-show='loadingCards')
+
+            span.input-group-btn
+              button.btn.btn-default(type='button')
+                i.glyphicon.glyphicon-refresh
 
       div
         span Look for a {% verbatim %} {{ card_type.name }} {% endverbatim %}
 
-      input.nullable.form-control(
-        type='text'
-        typeahead-loading="loadingCards"
-        ng-model='{% verbatim %} copy_selected {% endverbatim %}'
-        typeahead='{% verbatim %} copy.repr for copy in getCards($viewValue, card_type_id) {% endverbatim %}'
-        typeahead-min-length="3"
-        typeahead-on-select="add_selected_card($item)"
-        title="Use TAB to validate your choice, Enter to proceed."
-      )
-      i.glyphicon.glyphicon-refresh(ng-show='loadingCards')
-
       h3(ng-show="cards_selected.length")
-        {% verbatim %} {{ cards_selected.length }} {% endverbatim %} titres sélectionnés. Total: {% verbatim %} {{ total_price }} {% endverbatim %}
+        {% verbatim %} {{ getTotalCopies() }} {% endverbatim %} titres sélectionnés. Total: {% verbatim %} {{ total_price }} {% endverbatim %}
       div(ng-show="cards_selected", ng-repeat=" card in cards_selected ")
         h4
           a(href="{% verbatim %} {{ card.details_url }} {% endverbatim %}") {% verbatim %} {{card.title}} {% endverbatim %}
           span {% verbatim %} {{card.authors}} {% endverbatim %}
           i.glyphicon.glyphicon-remove(ng-click="remove_from_selection($index)", style="float: right;")
         span
-            input.form-control(
-              type="number", step="0.1", min=0
-              value="{% verbatim %} {{card.price_sold}} {% endverbatim %}"
-              ng-model="{% verbatim %} cards_selected[$index].price_sold {% endverbatim %}"
-              ng-change="{% verbatim %} updateTotalPrice() {% endverbatim %}"
-            )
+
+        .row
+          .col-md-3
+            p.input-group
+                label.sr-only Prix
+                input.form-control(
+                  type="number", step="0.1", min=0
+                  value="{% verbatim %} {{card.price_sold}} {% endverbatim %}"
+                  ng-model="{% verbatim %} cards_selected[$index].price_sold {% endverbatim %}"
+                  ng-change="{% verbatim %} updateTotalPrice() {% endverbatim %}"
+                )
+                span.input-group-addon €
+
+          .col-md-3
+            p.input-group
+                label.sr-only Quantité
+                span.input-group-addon X
+                input.form-control(
+                  type="number", min=0, max=99
+                  ng-model="{% verbatim %} cards_selected[$index].quantity {% endverbatim %}"
+                  ng-change="{% verbatim %} updateTotalPrice() {% endverbatim %}"
+                )
 
 
       input.btn.btn-primary(type="submit", value="Valider", ng-click="sellCards()")
