--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -75,7 +75,7 @@ div(ng-controller="sellController")
             input.nullable.form-control(
               type='text'
               typeahead-loading="loadingCards"
-              ng-model='{% verbatim %} copy_selected {% endverbatim %}'
+              ng-model='{% verbatim %}copy_selected{% endverbatim %}'
               typeahead='{% verbatim %} copy.repr for copy in getCards($viewValue, card_type_id) {% endverbatim %}'
               typeahead-min-length="3"
               typeahead-on-select="add_selected_card($item)"
@@ -92,7 +92,7 @@ div(ng-controller="sellController")
 
       h3(ng-show="cards_selected.length")
         {% verbatim %} {{ getTotalCopies() }} {% endverbatim %} titres sélectionnés. Total: {% verbatim %} {{ total_price }} {% endverbatim %}
-      div(ng-show="cards_selected", ng-repeat=" card in cards_selected ")
+      div(ng-show="cards_selected", ng-repeat="card in cards_selected")
         h4
           a(href="{% verbatim %} {{ card.details_url }} {% endverbatim %}") {% verbatim %} {{card.title}} {% endverbatim %}
           span {% verbatim %} {{card.authors}} {% endverbatim %}
@@ -122,7 +122,7 @@ div(ng-controller="sellController")
                 )
 
 
-      input.btn.btn-primary(type="submit", value="Valider", ng-click="sellCards()")
+      input.btn.btn-primary(id="validateButton", type="submit", value="Valider", ng-click="sellCards()")
       // input.btn.btn-primary(type="submit", value="Valider", ng-submit="sellCards()")
       input.btn.btn(value="Annuler", ng-click="cancelCurrentData()")
 
