--- a/templates/base.jade
+++ b/templates/base.jade
@@ -53,6 +53,9 @@ html(ng-app="abelujo")
           li
             a(href="/history") Historique
 
+          li
+            a(href="/alerts") Alertes
+
   div.col-md-10(id="content")
     {% if messages %}
     ul
