ui, menu badge - get the total of cards to command with angular
and not with block templates.
Much less duplication of code, we only write it once, it works for all
templates that inherit "base.jade". See what we removed in views.py.

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -48,8 +48,7 @@ html(ng-app="abelujo")
             a(href="/deposits") Dépôts
           li
             a(href="/commands") A commander
-              span.badge {% block auto_command_nb %} {{auto_command_nb}} {% endblock %}
-              // nb of copies in auto_command basket
+              span.badge {% verbatim %} {{auto_command_total}} {% endverbatim %}
           li
             a(href="/history") Historique
 
