(quick fix) history template: show title

--- a/templates/search/history.jade
+++ b/templates/search/history.jade
@@ -24,7 +24,7 @@
 
 
 div(ng-controller="historyController")
-    h3(ng-show="history") Historique des ventes //unseen
+    h3 Historique des ventes
     div(
       ng-repeat="hist in history"
     )
