--- a/templates/base.jade
+++ b/templates/base.jade
@@ -47,7 +47,7 @@ html(ng-app="abelujo")
           li
             a(href="/deposits") Dépôts
           li
-            a(href="inventories") Inventaires
+            a(href="/inventories") Inventaires
           li
             a(href="/commands") A commander
               span.badge {% verbatim %} {{auto_command_total}} {% endverbatim %}
