--- a/templates/base.jade
+++ b/templates/base.jade
@@ -14,6 +14,8 @@
 // You should have received a copy of the GNU General Public License
 // along with Abelujo.  If not, see <http://www.gnu.org/licenses/>.
 !!! 5
+
+{% load i18n %}
 {% load staticfiles %}
 
 html(ng-app="abelujo")
@@ -21,41 +23,41 @@ html(ng-app="abelujo")
     script(type='text/javascript', src="{% static 'bower_components/jquery/jquery.js' %}") // load jquery before django_bootstrap.
     script(type='text/javascript', src="{% static 'js/build/vendor.js' %}")
     script(type='text/javascript', src="{% static 'js/build/abelujo.js' %}")
-
-    div {% block pagetitle %} {% endblock %}
+    script(type='text/javascript', src='{% url "django.views.i18n.javascript_catalog" %}')
+      div {% block pagetitle %} {% endblock %}
   body.container
     nav.navbar.navbar-default(role="navigation")
       div.navbar-collapse
         ul.nav.navbar-nav
           li.active(href="#") Abelujo
           li
-            a.text-right(href="/#") Accueil
+            a.text-right(href="/#") {% trans "Accueil" %}
         url.nav.navbar-nav.navbar-right
           li
-            a.text-right(href="/admin") Admin
+            a.text-right(href="/admin") {% trans "Admin" %}
 
   body.container(ng-controller="baseController")
     div.col-md-2(id="menu")
       div
         ul.nav.nav-pills.nav-stacked
           li
-            a(href="/collection") Mon stock
+            a(href="/collection") {% trans "Mon stock" %}
           li
-            a(href="/sell") Vente
+            a(href="/sell") {% trans "Vente" %}
           li
-            a(href="/search") Nouvelle entrée
+            a(href="/search") {% trans "Nouvelle entrée" %}
           li
-            a(href="/deposits") Dépôts
+            a(href="/deposits") {% trans "Dépôts" %}
           li
-            a(href="/inventories") Inventaires
+            a(href="/inventories") {% trans "Inventaires" %}
           li
-            a(href="/commands") A commander
+            a(href="/commands") {% trans "A commander" %}
               span.badge {% verbatim %} {{auto_command_total}} {% endverbatim %}
           li
-            a(href="/history") Historique
+            a(href="/history") {% trans "Historique" %}
 
           li
-            a(href="/alerts") Alertes
+            a(href="/alerts") {% trans "Alertes" %}
               span.badge {% verbatim %} {{ alerts_open }} {% endverbatim %}
 
 
