--- a/templates/search/alerts.jade
+++ b/templates/search/alerts.jade
@@ -19,15 +19,16 @@
 
 {% block content %}
 
+{% load i18n %}
 {% load bootstrap3 %}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
 
 div(ng-controller="alertsController")
   div.list-group(ng-repeat="alert in alerts")
-    div.list-group-item(ng-class="{% verbatim %} {'list-group-item-success': true, 'list-group-item-danger': {{ alert.card.ambigous_sell }} } {% endverbatim %}") Alert du  {% verbatim %} {{ alert.date_creation }} {% endverbatim %}
-        div concernant la notice "{% verbatim %} {{ alert.card.title}} {% endverbatim %}"
-        div conflit ? {% verbatim %} {{ alert.card.ambigous_sell }} {% endverbatim %}
-        div depots concernés: {% verbatim %} {{ alert.deposits_repr }} {% endverbatim %}
+    div.list-group-item(ng-class="{% verbatim %} {'list-group-item-success': true, 'list-group-item-danger': {{ alert.card.ambigous_sell }} } {% endverbatim %}") {% trans "Alerte du" %}  {% verbatim %} {{ alert.date_creation }} {% endverbatim %}
+        div {% trans "concernant la notice" %} "{% verbatim %} {{ alert.card.title}} {% endverbatim %}"
+        div {% trans "conflit" %} ? {% verbatim %} {{ alert.card.ambigous_sell }} {% endverbatim %}
+        div {% trans "depots concernés" %}: {% verbatim %} {{ alert.deposits_repr }} {% endverbatim %}
 
 {% endblock %}
