--- a/templates/search/deposits_create.jade
+++ b/templates/search/deposits_create.jade
@@ -17,6 +17,7 @@
 
 {% block content %}
 
+{% load i18n %}
 {% load bootstrap3 %}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
@@ -30,28 +31,28 @@ div(ng-controller="IntroController")
   // form(action='/api/distributors', method='post')
   form(method='post')
       b
-        div Nom du dépôt
+        div {% trans "Nom du dépôt" %}
       input.form-control(type="text", ng-model="deposit_name", required)
       b
-        div Type de dépôt
+        div {% trans "Type de dépôt" %}
       select.form-control(ng-model="deposit_type", ng-options="elt.name group by elt.target for elt in deposit_types", required)
       b
-        div Nombre initial d'exemplaires
+        div {% trans "Nombre initial d'exemplaires" %}
       input.form-control(type="number", ng-model="initial_nb_copies")
       b
-        div Nombre minimum d'exemplaires
+        div {% trans "Nombre minimum d'exemplaires" %}
       input.form-control(type="number", ng-model="minimal_nb_copies")
       div.form-group
         div.checkbox
             input(type="checkbox", ng-model="auto_command")
-            | Automatiquement marquer les fiches à commander
+            | {% trans "Automatiquement marquer les fiches à commander" %}
       b
-        div Distributeur
+        div {% trans "Distributeur" %}
       select.form-control(ng-model="distributor", ng-options='dist for dist in dist_list', required)
         option(value="") ---
       div
-        span Cherchez des notices 
-        span(ng-show="distributor")  dont le distributeur est {% verbatim %} {{ distributor }} {% endverbatim %}:
+        span {% trans "Cherchez des notices" %} 
+        span(ng-show="distributor")  {% trans "dont le distributeur est" %} {% verbatim %} {{ distributor }} {% endverbatim %}:
       input.nullable.form-control(
         type='text'
         typeahead-loading="loadingCards"
