--- a/templates/search/inventory_new.jade
+++ b/templates/search/inventory_new.jade
@@ -17,16 +17,17 @@
 
 {% block content %}
 
+{% load i18n %}
 {% load bootstrap3 %}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
 
-h3 Inventaire en cours
+h3 {% trans "Inventaire en cours" %}
 div(ng-controller="inventoryNewController")
   form(method="get")
     .row
       p.input-group
-          div Chercher le stock
+          div {% trans "Chercher le stock" %}
           input.nullable.form-control(
             type='text'
             typeahead-loading="loadingCards"
@@ -34,7 +35,7 @@ div(ng-controller="inventoryNewController")
             typeahead='{% verbatim %} copy.repr for copy in getCards($viewValue, card_type_id) {% endverbatim %}'
             typeahead-min-length="3"
             typeahead-on-select="add_selected_card($item)"
-            title="Use TAB to validate your choice, Enter to proceed."
+            title="{% trans 'Use TAB to validate your choice, Enter to proceed.'%}"
           )
           i.glyphicon.glyphicon-refresh(ng-show='loadingCards')
 
@@ -44,21 +45,21 @@ div(ng-controller="inventoryNewController")
 
 
   h3(ng-show="cards_selected.length")
-    {% verbatim %} {{ getTotalCopies() }} {% endverbatim %} titres sélectionnés. Total: {% verbatim %} {{ total_price }} {% endverbatim %}
+    {% verbatim %} {{ getTotalCopies() }} {% endverbatim %} {% trans "titres sélectionnés. Total:" %} {% verbatim %} {{ total_price }} {% endverbatim %}
   div(ng-show="cards_selected", ng-repeat="card in cards_selected")
     h4
       a(href="{% verbatim %} {{ card.details_url }} {% endverbatim %}") {% verbatim %} {{card.title}} {% endverbatim %}
       span {% verbatim %} {{card.authors}} {% endverbatim %}
       i.glyphicon.glyphicon-warning-sign(
         ng-show="{% verbatim %} cards_selected[$index].ambigous_sell {% endverbatim %}"
-        title="There is a conflict with deposits.")
+        title="{% trans 'There is a conflict with deposits.' %}")
       i.glyphicon.glyphicon-remove(ng-click="remove_from_selection($index)", style="float: right;")
       i.glyphicon.glyphicon-exclamation-s
 
      span
         .col-md-1
         p.input-group
-            label.sr-only Quantité
+            label.sr-only {% trans "Quantité" %}
             span.input-group-addon X
             input.form-control(
                 type="number", min=0, max=99
