--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -17,11 +17,12 @@
 
 {% block content %}
 
+{% load i18n %}
 {% load bootstrap3 %}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
 
-h3 Effectuer une vente
+h3 {% trans "Effectuer une vente" %}
 div(ng-controller="sellController")
 
   div
@@ -79,7 +80,7 @@ div(ng-controller="sellController")
               typeahead='{% verbatim %} copy.repr for copy in getCards($viewValue, card_type_id) {% endverbatim %}'
               typeahead-min-length="3"
               typeahead-on-select="add_selected_card($item)"
-              title="Use TAB to validate your choice, Enter to proceed."
+              title="{% trans 'Use TAB to validate your choice, Enter to proceed.' %}"
             )
             i.glyphicon.glyphicon-refresh(ng-show='loadingCards')
 
@@ -88,17 +89,17 @@ div(ng-controller="sellController")
                 i.glyphicon.glyphicon-refresh
 
       div
-        span Look for a {% verbatim %} {{ card_type.name }} {% endverbatim %}
+        span {% trans "Look for a" %} {% verbatim %} {{ card_type.name }} {% endverbatim %}
 
       h3(ng-show="cards_selected.length")
-        {% verbatim %} {{ getTotalCopies() }} {% endverbatim %} titres sélectionnés. Total: {% verbatim %} {{ total_price }} {% endverbatim %}
+        {% verbatim %} {{ getTotalCopies() }} {% endverbatim %} {% trans "titres sélectionnés. Total:" %} {% verbatim %} {{ total_price }} {% endverbatim %}
       div(ng-show="cards_selected", ng-repeat="card in cards_selected")
         h4
           a(href="{% verbatim %} {{ card.details_url }} {% endverbatim %}") {% verbatim %} {{card.title}} {% endverbatim %}
           span {% verbatim %} {{card.authors}} {% endverbatim %}
           i.glyphicon.glyphicon-warning-sign(
             ng-show="{% verbatim %} cards_selected[$index].ambigous_sell {% endverbatim %}"
-            title="There is a conflict with deposits.")
+            title="{% trans 'There is a conflict with deposits.' %}")
           i.glyphicon.glyphicon-remove(ng-click="remove_from_selection($index)", style="float: right;")
           i.glyphicon.glyphicon-exclamation-s
         span
@@ -117,7 +118,7 @@ div(ng-controller="sellController")
 
           .col-md-3
             p.input-group
-                label.sr-only Quantité
+                label.sr-only {% trans "Quantité" %}
                 span.input-group-addon X
                 input.form-control(
                   type="number", min=0, max=99
@@ -126,11 +127,9 @@ div(ng-controller="sellController")
                 )
 
 
-
-
-      input.btn.btn-primary(id="validateButton", type="submit", value="Valider", ng-click="sellCards()")
+      input.btn.btn-primary(id="validateButton", type="submit", value="{% trans 'Valider' %}", ng-click="sellCards()")
       // input.btn.btn-primary(type="submit", value="Valider", ng-submit="sellCards()")
-      input.btn.btn(value="Annuler", ng-click="cancelCurrentData()")
+      input.btn.btn(value="{% trans 'Annuler' %}", ng-click="cancelCurrentData()")
 
 
 {% endblock content %}
