--- a/templates/search/search_result.jade
+++ b/templates/search/search_result.jade
@@ -69,7 +69,7 @@ for b in result_list
         if b.description
           div {{b.description}}
 
-  form.form-inline(action='/add/', method='post')
+  form.form-inline(action="{% url 'card_add' %}", method='post')
     {% csrf_token %}
     {% bootstrap_form addForm %}
     input(type='hidden', value="{{ forloop.counter0 }}", name='forloop_counter0')
